# github-wiki-see-rs

./: .dockerignore  AUTO_REDIRECT_API.md  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml  main.md
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
cfworkers/ghwsee-indexable-redirect/: README.md  handler.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js  wrangler.toml
cfworkers/ghwsee-indexable-redirect/src/: handler.ts
cfworkers/ghwsee-indexable-redirect/test/: handler.test.ts
src/: decommission.rs  gh_extensions.rs  main.rs  retrieval.rs  scraper.rs
templates/: front_page.html  mirror.html  robots.txt  robots_ip.txt
test-data/: _Sidebar.md  _Sidebar_pure.md  update-wiki-index.sh  wiki-homeless-index.html  wiki-index.html
