[package]
name = "github-wiki-see"
version = "0.2.1"
authors = ["Nelson Chen <crazysim@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = "0.5.1"
askama = { version = "0.12.1", features = ["with-rocket", "mime", "mime_guess"] }
askama_rocket = "0.12.0"
reqwest = { version = "0.12", features = ["deflate", "brotli", "gzip"] }
tokio = { version = "1", features = ["full"] }
comrak = "0.28"
regex = "1"
lazy_static = "1.4.0"
percent-encoding = "2.3.1"
scraper = "0.18.1"
quick-xml = "0.31.0"
phf = { version = "0.11", features = ["macros"] }
futures = "0.3.30"
more-asserts = "0.3.1"
git-version = "0.3.9"
lol_html = "2.6.0"
nipper = "0.1.9"

[features]
