[package]
name = "github-wiki-see"
version = "0.2.1"
authors = ["Nelson Chen <crazysim@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = "0.5.1"
askama = "0.15.4"
reqwest = { version = "0.13.2", features = ["deflate", "brotli", "gzip"] }
tokio = { version = "1", features = ["full"] }
comrak = "0.50.0"
regex = "1"
lazy_static = "1.5.0"
percent-encoding = "2.3.2"
scraper = "0.25.0"
quick-xml = "0.39.1"
phf = { version = "0.13.1", features = ["macros"] }
futures = "0.3.32"
more-asserts = "0.3.1"
git-version = "0.3.9"
lol_html = "2.7.1"
nipper = "0.1.9"

[features]
